[gd_scene load_steps=15 format=3 uid="uid://dvcudb8tvpwwv"]

[ext_resource type="Script" uid="uid://i1v0jhrcxxio" path="res://actors/environments/Zone.gd" id="1"]
[ext_resource type="PackedScene" path="res://combat/traits/Owned.tscn" id="2"]
[ext_resource type="FontFile" uid="uid://bsdjbpjy1umxj" path="res://assets/fonts/bungee/BungeeLayers-Regular.otf" id="3"]
[ext_resource type="Shader" uid="uid://478yhpwk34ah" path="res://assets/shaders/Clock.gdshader" id="4"]
[ext_resource type="Texture2D" uid="uid://c1veqj7sis6ax" path="res://assets/sprites/10x10_square.png" id="5"]
[ext_resource type="Texture2D" uid="uid://omjkgumq3orr" path="res://assets/modes/crown.png" id="6"]
[ext_resource type="Texture2D" uid="uid://xojnwktaieec" path="res://assets/sprites/signs/Osquare.png" id="7"]
[ext_resource type="PackedScene" path="res://combat/traits/Strategic.tscn" id="8"]

[sub_resource type="ShaderMaterial" id="1"]
resource_local_to_scene = true
shader = ExtResource("4")
shader_parameter/time_left = 0.0
shader_parameter/max_time = 0.0
shader_parameter/active = true
shader_parameter/x_direction = 1.0
shader_parameter/color_on = Color(1, 1, 1, 1)
shader_parameter/color_off = Color(0, 0, 0, 1)

[sub_resource type="CanvasItemMaterial" id="2"]

[sub_resource type="FontFile" id="3"]
fallbacks = Array[Font]([ExtResource("3")])
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0

[sub_resource type="Animation" id="4"]
resource_name = "Appear"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4, 0.6),
"transitions": PackedFloat32Array(-2, -2, -2),
"update": 0,
"values": [Vector2(0.01, 0.01), Vector2(1.1, 1.1), Vector2(1, 1)]
}

[sub_resource type="Animation" id="5"]
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.4),
"transitions": PackedFloat32Array(-2, -2, -2, -2),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.9, 0.9), Vector2(1, 1), Vector2(0, 0)]
}

[sub_resource type="Animation" id="6"]
resource_name = "Taken"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(-2, -2, -2, -2, -2),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.1, 1.1), Vector2(1, 1), Vector2(1.05, 1.05), Vector2(1, 1)]
}

[node name="Zone" type="Area2D" groups=["hill"]]
scale = Vector2(0.01, 0.01)
z_index = -10
z_as_relative = false
collision_layer = 0
script = ExtResource("1")

[node name="Owned" parent="." instance=ExtResource("2")]

[node name="Strategic" parent="." instance=ExtResource("8")]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
visible = false

[node name="Background" type="Polygon2D" parent="."]
visible = false
modulate = Color(1, 1, 1, 0.2)
self_modulate = Color(1, 1, 1, 0.78)
material = SubResource("1")
texture = ExtResource("5")

[node name="Border" type="Line2D" parent="."]
visible = false
self_modulate = Color(1.1, 1.1, 1.1, 1)
material = SubResource("2")
width = 20.0
default_color = Color(1, 1, 1, 1)
begin_cap_mode = 1
end_cap_mode = 1

[node name="Tower1" type="Sprite2D" parent="Border"]
self_modulate = Color(1.15, 1.15, 1.15, 1)
scale = Vector2(0.5, 0.5)
texture = ExtResource("7")

[node name="Tower2" type="Sprite2D" parent="Border"]
self_modulate = Color(1.15, 1.15, 1.15, 1)
scale = Vector2(0.5, 0.5)
texture = ExtResource("7")

[node name="Tower3" type="Sprite2D" parent="Border"]
self_modulate = Color(1.15, 1.15, 1.15, 1)
scale = Vector2(0.5, 0.5)
texture = ExtResource("7")

[node name="Tower4" type="Sprite2D" parent="Border"]
self_modulate = Color(1.15, 1.15, 1.15, 1)
scale = Vector2(0.5, 0.5)
texture = ExtResource("7")

[node name="Crown" type="Sprite2D" parent="."]
visible = false
self_modulate = Color(1, 1, 1, 0.2)
position = Vector2(0, -23)
scale = Vector2(4, 4)
texture = ExtResource("6")

[node name="Wrapper" type="Node2D" parent="."]

[node name="Monogram" type="Label" parent="Wrapper"]
modulate = Color(1, 1, 1, 0.501961)
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -150.0
offset_right = 150.0
offset_bottom = 150.0
theme_override_fonts/font = SubResource("3")
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Crown" type="Sprite2D" parent="Wrapper"]
visible = false
modulate = Color(1, 1, 1, 0.501961)
position = Vector2(0, -150)
scale = Vector2(2, 2)
texture = ExtResource("6")

[node name="Timer" type="Timer" parent="."]
wait_time = 10.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Appear = SubResource("4")
anims/Disappear = SubResource("5")
anims/Taken = SubResource("6")

[connection signal="body_entered" from="." to="." method="_on_Zone_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Zone_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
